test/errors/type/float/tobool.yasl
echo 0.0.tobool(1)
