test/errors/type/float/tobool.yasl.err
TypeError: float.tobool expected arg in position 0 to be of type float, got arg of type int. (line 1)
